# hybrid-search

./: Dockerfile  Hybrid Search API.docx  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  embedding.py  main.py
data/: articles.csv  magazine_content.csv  magazine_info.csv
scripts/: backfill_embeddings.py  generate_fake_data.py  generate_test_vector.py  load_data.py
sql/: 01_schema.sql  02_triggers.sql  03_indexes.sql  03_ingestdata.sql  04_hydrate_tables.sql  05_getready.sql
