[tool.poetry]
name = "hybrid-search"
version = "0.1.0"
description = "the best hybrid search"
authors = ["jrsharma <jyotiranjansharma1.1@gmail.com>"]
readme = "README.md"
packages = [
  { include = "app" },
  { include = "scripts" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"

# API (optional)
fastapi = "0.111.0"
uvicorn = { version = "0.30.0", extras = ["standard"] }

# DB + async (greenlet pulled in via asyncio extra)
sqlalchemy = { version = "2.0.31", extras = ["asyncio"] }
asyncpg = "0.29.0"
greenlet = "^3.0"  # explicit is fine

# models/utils
sentence-transformers = "2.7.0"
pydantic = "2.7.1"
numpy = "1.26.4"
psycopg = {version = "^3.2", extras = ["binary"]}

[tool.poetry.scripts]
load-data = "scripts.load_data:main_cli"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.16"
faker = "^37.6.0"
pandas = "^2.3.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
